--- a/{{cookiecutter.github_project_name}}/test/CMakeLists.txt
+++ b/{{cookiecutter.github_project_name}}/test/CMakeLists.txt
@@ -1,6 +1,3 @@
-
-cmake_minimum_required(VERSION 3.1)
-
 if(DOWNLOAD_DOCTEST OR DOCTEST_SRC_DIR)
 
     if(DOWNLOAD_DOCTEST)
@@ -36,7 +33,8 @@ include_directories(${DOCTEST_INCLUDE_DIRS})
 
 
 
-file(GLOB_RECURSE ${PROJECT_NAME}_TESTS  *.cpp)
+file(GLOB_RECURSE ${PROJECT_NAME}_TESTS  
+     RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)
 list(REMOVE_ITEM ${PROJECT_NAME}_TESTS main.cpp)
 
 
@@ -50,6 +48,3 @@ add_executable( ${${PROJECT_NAME}_TEST_TARGET}
     ${${PROJECT_NAME}_TESTS}
 )
 
-target_include_directories(${${PROJECT_NAME}_TEST_TARGET}
-     INTERFACE   $<BUILD_INTERFACE:${DOCTEST_INCLUDE_DIRS}>
-)
