--- a/{{cookiecutter.github_project_name}}/python/CMakeLists.txt
+++ b/{{cookiecutter.github_project_name}}/python/CMakeLists.txt
@@ -1,16 +1,9 @@
-include_directories(${PROJECT_INCLUDE_DIR})
 
 find_package(xtensor REQUIRED)
-include_directories(${xtensor_INCLUDE_DIRS})
-
 find_package(xtensor-python REQUIRED)
-include_directories(${xtensor-python_INCLUDE_DIRS})
-
 find_package(pybind11 REQUIRED)
-include_directories(${pybind11_INCLUDE_DIRS})
-
 find_package(NUMPY REQUIRED)
-include_directories(${PYTHON_NUMPY_INCLUDE_DIR})
+
 
 file(GLOB_RECURSE ${PROJECT_NAME}_PYTHON_SRC_FILES 
      RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)
@@ -26,6 +19,12 @@ pybind11_add_module( ${${PROJECT_NAME}_PYTHON_INTERFACE_TARGET} main.cpp
 
 
 set_target_properties(${${PROJECT_NAME}_PYTHON_INTERFACE_TARGET} PROPERTIES OUTPUT_NAME {{cookiecutter.py_package_name}} )
+
+
+target_include_directories(  ${${PROJECT_NAME}_PYTHON_INTERFACE_TARGET} PRIVATE 
+    "$<BUILD_INTERFACE:${PROJECT_INCLUDE_DIR};${xtensor_INCLUDE_DIRS};${xtensor-python_INCLUDE_DIR};${pybind11_INCLUDE_DIRS};${PYTHON_NUMPY_INCLUDE_DIR}>"
+)
+
 
 
 
